test/self-test/phase2/test_5.out
Error type 12 at line 15: array indexing with a non-integer type expression
Error typy 8 at line 16: incompatible return type